[package]
name = "stone"
version = "0.0.3"
authors = ["John Matthew Narofsky <7ytd765789@gmail.com>"]
edition = "2018"
description = "Something of a toy language, for now."
license = "AGPL-3.0-or-later"
repository = "https://github.com/green-narofsky/stone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bincode = "1.3.1"
nom = "5.1.2"
serde_json = "1.0.58"
lasso = { version = "0.3.1", features = ["serialize"] }
dynasmrt = "1.0.0"
tagged-refs = { path = "./tagged-refs" }

[workspace]
members = ["tagged-refs"]
